new revision html and Css  with 'W3' and patch error on club page (statuts)

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -168,7 +168,7 @@
                       </p>
                       <p class="card-text text-center mt-3 ">
                         <strong>Venez nous rejoindre !!!</strong>
-                        <a href="/Index/evenement.html"><img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30" width="30">  
+                        <a href="/Index/evenement.html"><img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" alt="" height="30" width="30">  
                         </a>
                       </p>
                     </div>
@@ -177,7 +177,7 @@
               </div>
             </div>
             <!--general information-->
-            <div class="row ">  
+            <div class="row">  
               <div class="col">
                 <section class="general_information">
                   <div class="card">
@@ -185,7 +185,8 @@
                     <div class="card-body">
                       <p class="card-text">Suite à la double affilation du club (UFOLEP + FFM) et à l'augmentation de 
                         l'affiliation FFM. </p>
-                      <p class="adhésion text-center"><strong> L'Adhésion au Club est passée à 20 €</strong></p>
+                      <p class="adhésion text-center"><strong>L'Adhésion au Club est passée à 20 €
+                      </strong></p>
                     </div>
                   </div>
                 </section>
