--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
@@ -174,7 +174,7 @@
                     </div>
                   </div>
                   <!-- Management participation modal-->
-                  <div class="modal fade" id="join_management" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
+                  <div class="modal fade" id="join_management" tabindex="-1" role="dialog" aria-labelledby="join_modal_label_management" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
@@ -183,18 +183,18 @@
                         <div class="modal-body">
                           <form>
                             <div class="form-group">
-                              <label for="name">Nom</label>
+                              <label for="management_name">Nom</label>
                               <input type="text" class="form-control" id="management_name" name="name" placeholder="Dupont">
                             </div>
                             <div class="form-group">
-                              <label for="surname">Prénom</label>
+                              <label for="management_surname">Prénom</label>
                               <input type="text" class="form-control" id="management_surname" name="surname" placeholder="François">
                             </div>
                             <div class="form-group">
-                              <label for="mail" class="form-label">Adresse e-mail</label>
+                              <label for="management_mail" class="form-label">Adresse e-mail</label>
                               <div class="input-group has-validation">
                                 <span class="input-group-text" id="input_management_group">@</span>
-                                <input type="text" class="form-control" id="management_mail" aria-describedby="inputGroupPrepend" required placeholder="françois_dupont@moto.fr">
+                                <input type="text" class="form-control" id="management_mail" aria-describedby="input_management_group" required placeholder="françois_dupont@moto.fr">
                                 <div class="invalid-feedback">
                                   Veuillez rentrer une adresse mail valide
                                 </div>
@@ -214,7 +214,7 @@
                     </div>
                   </div>
                   <!-- Pilot participation modal -->
-                  <div class="modal fade" id="join_pilot" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
+                  <div class="modal fade" id="join_pilot" tabindex="-1" role="dialog" aria-labelledby="join_modal_label_pilot" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header ">
@@ -223,25 +223,25 @@
                         <div class="modal-body">
                           <form>
                             <div class="form-group">
-                              <label for="name">Nom</label>
+                              <label for="pilot_name">Nom</label>
                               <input type="text" class="form-control" id="pilot_name" name="name" placeholder="Dupont">
                             </div>
                             <div class="form-group">
-                              <label for="surname">Prénom</label>
+                              <label for="pilot_surname">Prénom</label>
                               <input type="text" class="form-control" id="pilot_surname" name="surname" placeholder="François">
                             </div>
                             <div class="form-group">
-                              <label for="mail" class="form-label">Adresse e-mail</label>
+                              <label for="pilot_mail" class="form-label">Adresse e-mail</label>
                               <div class="input-group has-validation">
                                 <span class="input-group-text" id="input_pilot_group">@</span>
-                                <input type="text" class="form-control" id="pilot_mail" aria-describedby="inputGroupPrepend" required   placeholder="françois_dupont@moto.fr">
+                                <input type="text" class="form-control" id="pilot_mail" aria-describedby="input_pilot_group" required   placeholder="françois_dupont@moto.fr">
                                 <div class="invalid-feedback">
                                   Veuillez rentrer une adresse mail valide
                                 </div>
                               </div>
                             </div>
                             <div class="form-group">
-                            <label for="message">Message</label>
+                            <label for="pilot_message">Message</label>
                             <textarea class="form-control" name="message" id="pilot_message" rows="3"></textarea>
                             </div>
                           </form>
@@ -353,7 +353,7 @@
           <div class="col-6">
             <div class="contact text-center">
               <span>Retrouvez-nous sur :</span>
-              <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png" width="16" height="16">
+              <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png" alt="" width="16" height="16">
               </a> 
             </div>
           </div>
