--- a/Index/contact.html
+++ b/Index/contact.html
@@ -81,10 +81,10 @@
                 <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" alt=""  width="130" height="60"></a> 
               </div>
               <div class="col">  
-                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" width="130" height="60"></a> 
+                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" alt="" width="130" height="60"></a> 
               </div>
               <div class="col">
-                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" width="130" height="60"></a> 
+                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" alt="" width="130" height="60"></a> 
               </div>
             </div>
           </div>
@@ -100,6 +100,7 @@
             <div class="row">
               <div class="col">
                 <section>
+                  <h2>Formulaire de contact</h2>
                   <div class="formulaire">
                       <form class="needs-validation pt-1" novalidate>
                         <div class="form-group col-8 m-auto mt-3">
@@ -184,7 +185,7 @@
         <div class="col-12 pt-1">
           <div class="contact">
             <span>Retrouvez-nous sur :</span>
-            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png" width="16" height="16">
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png" alt="" width="16" height="16">
             </a> 
           </div>
         </div>
