create robots.txt, resolve every error on scss files and html files,

--- a/AMCO/evenement.html
+++ b/AMCO/evenement.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap">
   <link rel="stylesheet" href="/Style/style.css">
-  <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <title> Evènement de l'Amicale Motos Cyclos Occitanie</title>
 </head>
 <body class="d-flex flex-column">
-  <div class="content" id="content">
+  <div class="content">
     <header>
       <div class="second_banniere">
         <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid ">
@@ -69,9 +69,9 @@
         </div>
       </div>
     </nav>
-    <div class="menu_nav" id="sidebar">  
+    <div class="menu_nav">  
       <div class="container">
-        <h2 class="text-center">Menu</h2>
+        <a class="navbar-brand text-warning" id="sidebar">Menu</a>
         <ul class="list-unstyled mt-5">
             <li class="nav-item ">
               <a class="nav-link" aria-current="page" href="/index.html">
@@ -140,10 +140,9 @@
               <div class="col">
                 <section class="event_description">
                   <div class="card">
-                    <h2 class="card-header"><b><u>Juillet 2023</u></b></h2>
+                    <h2 class="card-header">Course d'endurance & Barbecue</h2>
                     <img src="/Annexe/Images/Motocross.jpg" class="img-fluid" alt="img-course">
                     <div class="card-body pt-1">
-                      <h6 class="card-title w-75">Course d'endurance & Barbecue</h6>
                       <p class="card-text">
                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-geo-alt-fill" viewbox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                         </svg> <strong>Arize sur l'Hers</strong>
@@ -178,7 +177,7 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="join_modal_label_management"> Participer à l'évènement en tant que Bénévole</h5>
+                          <h3 class="modal-title" id="join_modal_label_management"> Participer à l'évènement en tant que Bénévole</h3>
                         </div>
                         <div class="modal-body">
                           <form>
@@ -218,7 +217,7 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header ">
-                          <h5 class="modal-title" id="join_modal_label_pilot"> Participer à l'évènement en tant que Pilote</h5>
+                          <h3 class="modal-title" id="join_modal_label_pilot"> Participer à l'évènement en tant que Pilote</h3>
                         </div>
                         <div class="modal-body">
                           <form>
@@ -272,7 +271,7 @@
             <div class="row">
               <div class="col">
                 <section class="participation">
-                  <h5>Participants officiel</h5>
+                  <h4>Participants officiel</h4>
                   <table class="table mb-0" id="table_participation">
                     <thead class="thead-dark">
                       <tr>
@@ -322,7 +321,7 @@
             <div class="row"> 
               <div class="col">
                 <section class="progress_bar">
-                  <h5 class="pb-3">Nombres de personnes qui participe à l'évènements</h5>
+                  <h4 class="pb-3">Nombres de personnes qui participe à l'évènements</h4>
                   <div class="progress" id="bénévoles">
                     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 63%" aria-valuenow="190" aria-valuemin="0"  aria-valuemax="300">190 / 300 Bénévoles
                     </div>
@@ -360,7 +359,7 @@
           <div class="col-6">
             <div class="form_contact text-center">
               <span>Pour tout contact :</span>
-              <a href="/AMCO/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewbox="0 0 16 16">
+              <a href="contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewbox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
               </svg>
