--- a/AMCO/contact.html
+++ b/AMCO/contact.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="formulaire de contact de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap">
   <link rel="stylesheet" href="/Style/style.css">
-  <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="formulaire de contact de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <title>Page contact de l'Amicale Motos Cyclos Occitanie</title>
 </head>
 <body class="d-flex flex-column">
-  <div class="content" id="content">
+  <div class="content">
     <header>
       <div class="second_banniere">
         <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid ">
@@ -30,11 +30,11 @@
         </div>   
       </div>
     </nav>
-    <div class="menu_nav" id="sidebar">  
+    <div class="menu_nav">  
       <div class="container">
-        <h2 class="text-center">Menu</h2>
+        <a class="navbar-brand text-warning" id="sidebar">Menu</a>
         <ul class="list-unstyled mt-5">
-            <li class="nav-item ">
+            <li class="nav-item">
               <a class="nav-link" href="/index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
                   <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
