--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
 <body class="d-flex flex-column">
-  <div class="content" id="content">
+  <div class="content">
     <header>
       <div class="second_banniere">
         <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid ">
@@ -69,9 +69,9 @@
         </div>
       </div>
     </nav>
-    <div class="menu_nav" id="sidebar">  
+    <div class="menu_nav">  
       <div class="container">
-        <h2 class="text-center">Menu</h2>
+        <a class="navbar-brand text-warning" id="sidebar">Menu</a>
         <ul class="list-unstyled mt-5">
             <li class="nav-item ">
               <a class="nav-link" href="/index.html">
@@ -161,7 +161,7 @@
           <div class="col-6">
             <div class="form_contact text-center">
               <span>Pour tout contact :</span>
-              <a href="/AMCO/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewbox="0 0 16 16">
+              <a href="contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewbox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
               </svg>
