add meta name google site verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="0oimqZ7089TB2KD2jknDuvTkNG3NEkQYr-h1fG0uHvE" />
   <meta name="description" content="Retrouvez toute l'actualité et les différentes informations de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
   <meta name="keywords" content="motocross, Ariège, Occitanie, Foix,">
   <link rel="preconnect" href="https://fonts.googleapis.com">
