delete event page & article event on first page , change contact page because site it's not dynamique

--- a/AMCO/conditions.html
+++ b/AMCO/conditions.html
@@ -193,7 +193,7 @@
       </div>
       <div class="row pt-3">
         <div class="col-12 text-center" id="copyright">
-          <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+          <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Sylvain. Tous droits réservés.</p>
         </div>
       </div>
     </div>
