--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 </svg> Accueil
               </a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="/AMCO/evenement.html"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
                   <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                   <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                 </svg> Evènements
               </a>
-            </li>
+            </li>-->
             <li class="nav-item">
               <a class="nav-link" href="/AMCO/club.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
@@ -86,14 +86,14 @@
                 </svg> Accueil
               </a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="/AMCO/evenement.html"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
                   <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                   <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                 </svg> Evènements
               </a>
-            </li>
+            </li>-->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/AMCO/club.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
@@ -159,7 +159,7 @@
               </div>
             </div>
             <!--event article-->
-            <div class="row">  
+            <!--<div class="row">  
               <div class="col">
                 <section class="event_article">
                   <div class="card">
@@ -181,7 +181,7 @@
                   </div>
                 </section>
               </div>
-            </div>
+            </div> -->
             <!--general information-->
             <div class="row">  
               <div class="col">
@@ -226,7 +226,7 @@
         </div>
         <div class="row pt-3">
           <div class="col-12 text-center" id="copyright">
-            <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+            <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Sylvain. Tous droits réservés.</p>
           </div>
         </div>
       </div>
