modification meta description on index page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="0oimqZ7089TB2KD2jknDuvTkNG3NEkQYr-h1fG0uHvE" />
-  <meta name="description" content="Retrouvez toute l'actualité et les différentes informations de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
-  <meta name="keywords" content="Motocross, Ariège, Occitanie, Foix,">
+  <meta name="description" content="Bienvenue sur la page d'accueil du site de Motocross Ariégeois, l'A.M.C.O (l'Amicale Motos Cyclos Occitanie). Vous y retrouverez les différentes informations relative au club. l'A.M.C.O est une association de Motocross et Vélo basée dans l'Ariège."/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap">
