--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9LV3Q9WST"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-M9LV3Q9WST');
+    </script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="0oimqZ7089TB2KD2jknDuvTkNG3NEkQYr-h1fG0uHvE" />
+
   <meta name="description" content="Bienvenue sur la page d'accueil du site de Motocross Ariégeois, l'A.M.C.O (l'Amicale Motos Cyclos Occitanie). Vous y retrouverez les différentes informations relative au club. l'A.M.C.O est une association de Motocross et Vélo basée dans l'Ariège."/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
