--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -310,6 +310,7 @@
                         <span class="sr-only">Next</span>
                       </button>
                     </div>
+                    <p class="text-white text-center pt-5"> * Photos importées depuis le site de l'ancien site du club</p>
                   </div>
                 </section>
               </div>
