--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -303,11 +303,11 @@
                     <div class="d-flex" id="carousel_control">
                       <button class=" d-flex carousel-control-prev " type="button" data-bs-target="#sainte_suzanne_2011" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only" >Previous</span>
+                        <span class="sr-only" >Précédent</span>
                       </button>
                       <button class="  d-flex carousel-control-next" type="button" data-bs-target="#sainte_suzanne_2011" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
+                        <span class="sr-only">Suivant</span>
                       </button>
                     </div>
                     <p class="text-white text-center pt-5"> * Photos importées depuis le site de l'ancien site du club</p>
