add article for tarif saison 2022-2023

--- a/index.html
+++ b/index.html
@@ -168,10 +168,12 @@
               <div class="col">
                 <section class="new_saison">
                   <div class="card">
-                    <h2 class="card-header">Une nouvelle saison qui commence</h2>
-                    <div class="card-body">N'ayant pas de nouvelle concernant notre affiliation à l'UFOLEP, nous ne délivreront que des licences FFM ( Moto, Quad...).
+                    <h2 class="card-header">Saison 2022 - 2023</h2>
+                    <div class="card-body text-center mb-3">
+                      Le prix des licences FFM nous sont parvenus, voici le lien qui vous renvoie directement sur le site de la FFM 
+                      <a href="https://pratiquer.ffmoto.org/media/document/tarifs-licences-primo-2022-2023" target="_blank">cliquez ici</a>
                     </div>
-                    <div class="card-footer mt-0"> <strong>Les nouveaux Tarifs FFM vont nous parvenir très prochainement.</strong>
+                    <div class="card-footer"><strong> N'ayant aucune nouvelle de l'UFOLEP cette année aucune licence UFOLEP ne sera proposée</strong>
                     </div>
                   </div>
                 </section>
