--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -42,14 +42,6 @@
                 </svg> Accueil
               </a>
             </li>
-            <!--<li class="nav-item">
-              <a class="nav-link" href="/AMCO/evenement.html"> 
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
-                  <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                  <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                </svg> Evènements
-              </a>
-            </li>-->
             <li class="nav-item">
               <a class="nav-link" href="/AMCO/club.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
@@ -90,14 +82,6 @@
                     </svg> Accueil
                   </a>
                 </li>
-                <!--<li class="nav-item">
-                  <a class="nav-link" href="/AMCO/evenement.html"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
-                      <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                      <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                    </svg> Evènements
-                  </a>
-                </li>-->
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="/AMCO/club.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
@@ -149,6 +133,82 @@
       <div class="pictures my-4">
         <h1>Photos</h1>
         <div class="wrapper mx-1">
+          <article>
+            <div class="row">
+              <div class="col">
+                <section class="carousel-2022">
+                  <h2 class="mt-2">2022</h2>
+                  <div id="pics_2022" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../Annexe/Photos/2022/David Galles 2-min.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/David Galles-min.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Gérard Vergé 2-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Gérard Vergé 3-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Gérard Vergé-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Jean Philippe Herbaut 2-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Jean Philippe Herbaut 3-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Jean Philippe Herbaut 4-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Jean Philippe Herbaut 5-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Jean Philippe Herbaut-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Nicolas Bournonville 2-min.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Nicolas Bournonville 3-min.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Nicolas Bournonville-min.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Vergé Maxime 2-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Vergé Maxime 3-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Vergé Maxime 4-min.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Vergé Maxime-min.jpg" class="d-block" alt="...">
+                      </div>
+                
+                    </div>
+                    <div class="d-flex" id="carousel_control">
+                      <button class=" d-flex carousel-control-prev " type="button" data-bs-target="#pics_2022" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only" >Précédent</span>
+                      </button>
+                      <button class="  d-flex carousel-control-next" type="button" data-bs-target="#pics_2022" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Suivant</span>
+                      </button>
+                    </div>
+                    
+                  </div>
+                </section>
+              </div>
+            </div>
+          </article>
           <article>
             <div class="row">
               <div class="col">
