add pics - Mondial Quad 2022 Pont de Vaux

--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -136,6 +136,60 @@
           <article>
             <div class="row">
               <div class="col">
+                <section class="carousel-Quad-2022">
+                  <h2 class="mt-2">Mondial Quad 2022 Pont-de-Vaux</h2>
+                  <div id="pics_quad_2022" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../Annexe/Photos/2022/Quad/299.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/299.1.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/66.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/66.1.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/66.2.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/66.3.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/66.4.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/66.5.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/69.jpg" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/2022/Quad/69.1.jpg" class="d-block" alt="...">
+                      </div>
+                    </div>
+                    <div class="d-flex" id="carousel_control">
+                      <button class=" d-flex carousel-control-prev " type="button" data-bs-target="#pics_quad_2022" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only" >Précédent</span>
+                      </button>
+                      <button class="  d-flex carousel-control-next" type="button" data-bs-target="#pics_quad_2022" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Suivant</span>
+                      </button>
+                    </div>
+                    
+                  </div>
+                </section>
+              </div>
+            </div>
+          </article>
+          <article>
+            <div class="row">
+              <div class="col">
                 <section class="carousel-2022">
                   <h2 class="mt-2">2022</h2>
                   <div id="pics_2022" class="carousel slide" data-bs-ride="carousel">
