--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                       </p>
                       <p class="card-text">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-geo-alt-fill" viewbox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                        </svg> Le lieu vous sera communiqué par mails, sms ou Facebook
+                        </svg> Le lieu vous sera communiqué par mail, sms ou Facebook
                       </p>
                       <p class="card-text text-center" id="OrdreDuJour">Ordre du jour :
                         <ul class="mb-2">
