--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">  
 
-  
+  <link rel="shortcut icon" type="image/png" href="/Annexe/Images/Icone/favicon.ico">
   <link rel="stylesheet" href="/Style/style.css">
   <title>Amicale Motos Cyclos Occitanie</title>
 </head>
